<resources>
    <string name="app_name">MyNews</string>
    <string name="notif">Notifications</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="arts">Arts</string>
    <string name="business">Business</string>
    <string name="travel">Travel</string>
    <string name="politics">Politics</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="sports">Sports</string>
    <string name="begin_date">Begin Date</string>
    <string name="end_date">End Date</string>
    <string name="query">Search query term</string>
    <string name="search_articles">Search Articles</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_result">Search Result</string>
    <string name="notifications">Notifications</string>
    <string name="enabe_notif">Enable Notifications(once per day)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="notif_swith">Enable notifications (once per day)</string>
    <string name="camera">Camera</string>
    <string name="msg_token_fmt">FCM Token: %s</string>
    <string name="takephoto">Take Photo</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="title_camera">Camera</string>
    <string name="title_dynamicfeature">Module Test</string>
</resources>
