<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_margin="@dimen/margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/query"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/query"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/begin_date"
                android:layout_width="180dp"
                android:layout_height="61dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/query" />

            <EditText
                android:id="@+id/end_date"
                android:layout_width="180dp"
                android:layout_height="61dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/begin_date"
                app:layout_constraintTop_toBottomOf="@+id/query" />

            <CheckBox
                android:id="@+id/art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/arts"
                app:layout_constraintStart_toStartOf="@+id/begin_date"
                app:layout_constraintTop_toBottomOf="@+id/begin_date" />

            <CheckBox
                android:id="@+id/business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/business"
                app:layout_constraintStart_toStartOf="@+id/art"
                app:layout_constraintTop_toBottomOf="@+id/art" />

            <CheckBox
                android:id="@+id/entrepreneurs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/entrepreneurs"
                app:layout_constraintStart_toStartOf="@+id/business"
                app:layout_constraintTop_toBottomOf="@+id/business" />

            <CheckBox
                android:id="@+id/politics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/politics"
                app:layout_constraintEnd_toEndOf="@+id/end_date"
                app:layout_constraintHorizontal_bias="0.554"
                app:layout_constraintStart_toEndOf="@+id/art"
                app:layout_constraintTop_toBottomOf="@+id/end_date" />

            <CheckBox
                android:id="@+id/sports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/sports"
                app:layout_constraintStart_toStartOf="@+id/politics"
                app:layout_constraintTop_toBottomOf="@+id/politics" />

            <CheckBox
                android:id="@+id/travel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/travel"
                app:layout_constraintStart_toStartOf="@+id/sports"
                app:layout_constraintTop_toBottomOf="@+id/sports" />

            <Button
                android:id="@+id/search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/colorMyNews"
                android:text="@string/search"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/travel"
                android:textColor="@color/colorToolbar"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_date"
                app:layout_constraintStart_toStartOf="@+id/begin_date"
                app:layout_constraintTop_toBottomOf="@+id/query" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                app:layout_constraintStart_toStartOf="@+id/end_date"
                app:layout_constraintTop_toBottomOf="@+id/query" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>